# shubble

./: .dockerignore  .dokku-postbuild  .env  .env.example  .env.prod.example  .eslintrc.json  .flaskenv  .gitignore  .yamllint  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_TODAY.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.worker  GEMINI.md  INSTALLATION.md  INTRO_TO_UI.md  Intro_to_UI.md  Procfile  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  eslint.config.js  frontend-documentation.md  lstm_fixed.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  shubble.py  tsconfig.app.json  vite.config.js  vite.config.ts  web-development-intro.md
.github/: dependabot.yml  pull_request_template.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
alembic/: env.py
backend/: README.md  __init__.py  __main__.py  alembic.ini  cache.py  cache_dataframe.py  config.py  database.py  function_timer.py  matching.py  models.py  pubsub.py  requirements.txt  routes.py  seed_db.py  time_utils.py  utils.py
bubble/: __main__.py  agent.py  bubble.py  config.py  memory.py  sources.py
client/: .#vite.config.js  .gitignore  index.html  package-lock.json  package.json
data/: .gitignore  ClosestStop.ts  aggregated_schedule.json  announcements.json  cumlative_distances.py  cumulative_distances.json  generate_segment_stats.py  get_distances.py  inter_stop_times.json  lstm_eta.py  north_route.json  parseSchedule.js  plot_etas.py  routes.json  schedule.json  schedules.py  (+12 more)
(+628 files in other folders)
